# XandO

./: Plan.md  README.md  algo.py  app.py  draw.py  gameplay.py  index.html  main.py  pyproject.toml  rules.py
UI/: api.js  board.html  board.js  game.js  index.html  index.js  main.js  rules.js  styles.css
