[tool.poetry]
name = "xando"
version = "0.2.0"
description = "A Basic X and O single player game"
authors = ["pardunmeplz <dundh.parth@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
